# urchin

./: .gitignore  Cargo.toml  DIRECTION.md  LICENSE  Makefile  README.md  SPEC.md  TODO.md  memory_reading_list.md  mix.exs
config/: config.exs  dev.exs  test.exs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  watch.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  printer.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: env.rs  events.rs  instantiate.rs  interp.rs  lib.rs  schedule.rs  value.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
design/: multi-kinship.md
dev/: seed.exs
examples/: agent.urchin  anthropic_llm.urchin  episodic_memory.ur  garden_arcade.urchin  hunger.ur  io_llm.urchin  mind.ur  mock_llm.urchin  persona.urchin
lib/: urchin.ex
lib/urchin/: application.ex  budget.ex  llm.ex  mind.ex  node_observer.ex  telemetry.ex
lib/urchin/dev/: demo.ex  llm_stub.ex
lib/urchin/llm/: throttle.ex
lib/urchin/web/: dashboard_live.ex  endpoint.ex  error_html.ex  layouts.ex  router.ex  static_assets.ex  telemetry_relay.ex
test/urchin/: budget_test.exs  llm_test.exs  mind_test.exs
test/urchin/dev/: demo_test.exs  llm_stub_test.exs
test/urchin/llm/: throttle_test.exs
test/urchin/web/: dashboard_live_test.exs  telemetry_relay_test.exs
