[package]
name = "urchin-cli"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "urchin"
path = "src/main.rs"

[dependencies]
urchin-parser = { path = "../parser" }
urchin-types = { path = "../types" }
urchin-runtime = { path = "../runtime" }
clap = { version = "4", features = ["derive"] }
ariadne = "0.6"
serde_json = "1"
