[package]
name = "urchin-runtime"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
urchin-parser = { path = "../parser" }
urchin-types = { path = "../types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "urchin_runtime"
path = "src/lib.rs"
